Updated to NuGet CommonServiceLocator version 2.0.2

--- a/CommonServiceLocator.WindsorAdapter.Tests/CommonServiceLocator.WindsorAdapter.Tests.csproj
+++ b/CommonServiceLocator.WindsorAdapter.Tests/CommonServiceLocator.WindsorAdapter.Tests.csproj
@@ -59,6 +59,10 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\packages\Castle.Windsor.3.0.0.4001\lib\net40\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="CommonServiceLocator, Version=2.0.2.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.2.0.2\lib\net45\CommonServiceLocator.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
