--- a/CommonServiceLocator.WindsorAdapter.Tests/packages.config
+++ b/CommonServiceLocator.WindsorAdapter.Tests/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="Castle.Core" version="3.0.0.4001" />
   <package id="Castle.Windsor" version="3.0.0.4001" />
-  <package id="CommonServiceLocator" version="1.0" />
+  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net45" />
   <package id="NUnit" version="2.6.0.12054" />
 </packages>
