--- a/CommonServiceLocator.WindsorAdapter/packages.config
+++ b/CommonServiceLocator.WindsorAdapter/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Castle.Core" version="3.0.0.4001" />
   <package id="Castle.Windsor" version="3.0.0.4001" />
-  <package id="CommonServiceLocator" version="1.0" />
+  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net45" />
 </packages>
