--- a/CommonServiceLocator.WindsorAdapter.Tests/packages.config
+++ b/CommonServiceLocator.WindsorAdapter.Tests/packages.config
@@ -3,5 +3,5 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
   <package id="Castle.Windsor" version="4.1.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net45" />
-  <package id="NUnit" version="2.6.0.12054" />
+  <package id="NUnit" version="3.9.0" targetFramework="net45" />
 </packages>
